<resources>
    <string name="app_name">Happy New Year</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="christmas_tree">Christmas</string>
    <string name="txt_payment_info">Happy New Year</string>
    <string name="txt_schedule">Makar Sakranti</string>
    <string name="txt_setting">26 Repabulic Day</string>
    <string name="vasant_Panchami">Vasant Panchami</string>
    <string name="txt_contactus">Holika</string>
    <string name="txt_about_us">Holi</string>
    <string name="txt_maha_shivaratri">Maha Shivaratri</string>
    <string name="txt_close_app">do you</string>
    <string name="txt_yes">yes</string>
    <string name="txt_No">No</string>
</resources>
