<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="30dp"
    android:paddingLeft="8dp"
    android:paddingBottom="20dp"
    android:background="@color/colorPrimary">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/drawer_header">
        <RelativeLayout
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:paddingLeft="3dp"
            android:layout_marginTop="10dp"
            android:id="@+id/rl_profile_edt_img">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_maps_and_flags"
                />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_detail_container"
            android:paddingTop="13dp"
            android:layout_marginLeft="5dp"
            android:orientation="vertical"
            android:layout_toEndOf="@+id/rl_profile_edt_img">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="@dimen/medium_text"
                android:id="@+id/username"
                android:text="Digital Bharat"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:id="@+id/userEmail"
                android:textSize="@dimen/small_text"
                android:text="vanasa_dono@gmail.com"
                />

        </LinearLayout>

    </RelativeLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/drawer_header"
        android:layout_weight="13"
        android:weightSum="11"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:id="@+id/menu_delivery"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="centerCrop"
                android:layout_marginEnd="10dp"
                app:srcCompat="@drawable/ic_christmas_tree"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:gravity="center_vertical"
                android:id="@+id/btn_christmas"
                android:textSize="@dimen/medium_text"
                android:text="@string/christmas_tree"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_calendar"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_weight="1"
                android:id="@+id/txt_payment_info"
                android:gravity="center_vertical"
                android:textSize="@dimen/medium_text"
                android:text="@string/txt_payment_info"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/menu_scheduled"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="centerCrop"
                android:layout_marginEnd="10dp"
                app:srcCompat="@drawable/ic_kite"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:id="@+id/txt_sheldule"
                android:textSize="@dimen/medium_text"
                android:text="@string/txt_schedule"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/menu_setting"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="centerCrop"
                android:layout_marginEnd="10dp"
                app:srcCompat="@drawable/ic_india"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textSize="@dimen/medium_text"
                android:text="@string/txt_setting"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/invite_and_earn_container"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:src="@mipmap/ic_saraswati"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#ffffff"
                android:gravity="center_vertical"
                android:textSize="@dimen/medium_text"
                android:text="@string/vasant_Panchami"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:id="@+id/contactus_container"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="centerCrop"
                android:layout_marginEnd="10dp"
                app:srcCompat="@drawable/ic_lotus"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#ffffff"
                android:gravity="center_vertical"
                android:textSize="@dimen/medium_text"
                android:text="@string/txt_contactus"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:id="@+id/aboutus_container"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="centerCrop"
                android:layout_marginEnd="10dp"
                app:srcCompat="@drawable/ic_holi"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:textSize="@dimen/medium_text"
                android:text="@string/txt_about_us"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:id="@+id/privacy_container"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="centerCrop"
                android:layout_marginEnd="10dp"
                app:srcCompat="@drawable/ic_shiva"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:textSize="@dimen/medium_text"
                android:text="@string/txt_maha_shivaratri"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>